--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
+    "axios": "^1.8.4",
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.0"
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.0.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
